sass/base.scss
/* Color settings are imported from my .Xresources. */

@import "include-media";

html {
    font-size: 100%;
}

body {
    background: #1d1f21;
    color: #c5c8c6;
    font-family: "Noto Sans CJK JP", "Noto Sans", sans-serif;
    text-size-adjust: 100%;
}

@include media("<desktop") {
    .container {
        display: block;
        margin-left: 1rem;
        margin-right: 1rem;
    }
}

@include media(">=desktop") {
    .container {
        display: flex;
        width: 60rem;
        margin: auto;
    }

    main {
        width: 40rem;
        padding-right: 2rem;
    }
}

h1 {
    font-size: 2.2rem;
}

h2 {
    font-size: 1.8rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.4rem;
}

h5 {
    font-size: 1.3rem;
}

h6 {
    font-size: 1.2rem;
}

a {
    color: #de935f;
    text-decoration: none;

    &:hover {
        text-decoration: underline;
    }
}

p {
    line-height: 1.5;

    &:lang(ja) {
        line-height: 1.8;
    }
}

